<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="screen"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/design_default_color_background" android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.planting.PlantingFragment">

    <ImageView
        android:id="@+id/add_photo_icon"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="0sp"
        android:src="@drawable/ic_add_photo_icon"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0sp"
        android:text="@string/species" />

    <EditText
        android:id="@+id/editTextPlantName"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="20sp"
        android:hint="Araucaria"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0sp"
        android:text="@string/plantation_date" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0sp"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/editTextLat"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="20sp"
        android:contentDescription="@string/latitude"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0sp"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/editTextLong"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:contentDescription="@string/longitude"
        android:inputType="numberSigned|numberDecimal" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_gravity="bottom|center"
        android:ems="10"
        android:text="@string/submit" />

</LinearLayout>